Quartz sync: Jun 30, 2025, 12:15 AM